# google-photos-takeout-model

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  process_photos.ipynb  pyproject.toml
scripts/: already-shared.py  batch.py
src/google_photos_takeout_model/: __init__.py  check_secure.py  clear_albums.py  copy_albums.py  debug.py  delete_albums.py  delete_unsaved_creations.py  get_images.py  get_media.py  get_media_metadata.py  get_media_metadata2.py  normalize_albums.py  pw.py
src/google_photos_takeout_model/models/: __init__.py  albums.py  bases.py  google_photos_origins.py  media_items.py  origins.py
tests/: test.spec.ts
